# kpimtextedit

./: .clang-tidy  .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  .krazy  .pre-commit-config.yaml  .reviewboardrc  CMakeLists.txt  KF5PimTextEditConfig.cmake.in  Mainpage.dox  Messages.sh  REUSE.toml  emailquotehighlighter.cpp  emailquotehighlighter.h  emoticontexteditaction.cpp  emoticontexteditaction.h  emoticontexteditselector.cpp  emoticontexteditselector.h  htmlhighlighter.cpp  htmlhighlighter.h  inserthtmldialog.cpp  inserthtmldialog.h  insertimagedialog.cpp  insertimagedialog.h  insertimagewidget.cpp  insertimagewidget.h  inserttabledialog.cpp  inserttabledialog.h  kpimtextedit-texttospeech.h.cmake  kpimtextedit.categories  kpimtextedit_export.h  metainfo.yaml  selectspecialchar.cpp  selectspecialchar.h  tableactionmenu.cpp  tableactionmenu.h  tablecellformatdialog.cpp  tablecellformatdialog.h  tableformatdialog.cpp  tableformatdialog.h  (+4 more)
.reuse/: dep5
autotests/: CMakeLists.txt  editorutiltest.cpp  editorutiltest.h  emoticonlistwidgetselectortest.cpp  emoticonlistwidgetselectortest.h  emoticonunicodetabtest.cpp  emoticonunicodetabtest.h  slidecontainertest.cpp  slidecontainertest.h  textedittest.cpp  textedittest.h  textutilstest.cpp  textutilstest.h
richtextbuilders/testapp/: CMakeLists.txt  krichtexteditor.cpp  main.cpp
richtextbuilders/tests/: CMakeLists.txt  htmlbuildertest.cpp  plainmarkupbuildertest.cpp
src/: CMakeLists.txt  KF5PimTextEditConfig.cmake.in  KPimTextEditConfig.cmake.in  Messages.sh  config-kpimtextedit.h.cmake  editorutil.cpp  editorutil.h  emailquotedecorator.cpp  emailquotedecorator.h  emailquotehighlighter.cpp  emailquotehighlighter.h  emoticontexteditaction.cpp  emoticontexteditaction.h  emoticontexteditselector.cpp  emoticontexteditselector.h  htmlhighlighter.cpp  htmlhighlighter.h  inserthtmldialog.cpp  inserthtmldialog.h  inserthtmleditor.cpp  inserthtmleditor.h  insertimagedialog.cpp  insertimagedialog.h  insertimagewidget.cpp  insertimagewidget.h  inserttabledialog.cpp  inserttabledialog.h  inserttablewidget.cpp  inserttablewidget.h  kpimtextedit-index.qdoc  kpimtextedit.qdoc  kpimtextedit.qdocconf  kpimtextedit_private_export.h  selectspecialchar.cpp  selectspecialchar.h  selectspecialchardialog.cpp  selectspecialchardialog.h  slidecontainer.cpp  slidecontainer.h  syntaxhighlighterbase.cpp  (+13 more)
src/autotests/: CMakeLists.txt  editorutiltest.cpp  editorutiltest.h  emoticonunicodetabtest.cpp  emoticonunicodetabtest.h  slidecontainertest.cpp  textutilstest.cpp
src/composer-ng/: klinkdialog.cpp  klinkdialog_p.h  nestedlisthelper.cpp  nestedlisthelper_p.h  richtextcomposer.cpp  richtextcomposer.h  richtextcomposeractions.cpp  richtextcomposeractions.h  richtextcomposercontroler.cpp  richtextcomposercontroler.h  richtextcomposeremailquotedecorator.cpp  richtextcomposeremailquotedecorator.h  richtextcomposeremailquotehighlighter.cpp  richtextcomposeremailquotehighlighter.h  richtextcomposerimages.cpp  richtextcomposerimages.h  richtextcomposerwidget.cpp  richtextcomposerwidget.h  richtextexternalcomposer.cpp  richtextexternalcomposer.h
src/designer/: CMakeLists.txt  kpimtexteditwidgets.widgets
src/emoticon/: emoji.qrc  emoticoncategory.cpp  emoticoncategory.h  emoticoncategorymodelfilterproxymodel.cpp  emoticoncategorymodelfilterproxymodel.h  emoticonlistview.cpp  emoticonlistview.h  emoticonlistwidgetselector.cpp  emoticonlistwidgetselector.h  emoticonrecentlistview.cpp  emoticonrecentlistview.h  emoticonrecentusedfilterproxymodel.cpp  emoticonrecentusedfilterproxymodel.h  emoticontexteditaction.cpp  emoticontexteditaction.h  emoticontexteditselector.cpp  emoticontexteditselector.h  emoticonunicodemodel.cpp  emoticonunicodemodel.h  emoticonunicodemodelmanager.cpp  emoticonunicodemodelmanager.h  emoticonunicodeproxymodel.cpp  emoticonunicodeproxymodel.h  emoticonunicodetab.cpp  emoticonunicodetab.h  emoticonunicodeutils.cpp  emoticonunicodeutils.h  unicodeemoticon.cpp  unicodeemoticon.h  unicodeemoticonmanager.cpp  unicodeemoticonmanager.h  unicodeemoticonparser.cpp  unicodeemoticonparser.h
src/grantleebuilder/: abstractmarkupbuilder.h  markupdirector.cpp  markupdirector.h  markupdirector_p.h  plaintextmarkupbuilder.cpp  plaintextmarkupbuilder.h  texthtmlbuilder.cpp  texthtmlbuilder.h
src/kpimtextedit/: CMakeLists.txt  KF5PimTextEditConfig.cmake.in  editorutil.cpp  editorutil.h  inserthtmleditor.cpp  insertimagedialog.cpp  insertimagedialog.h  insertimagewidget.h  inserttabledialog.h  kpimtextedit_private_export.h  selectspecialchardialog.cpp  tablecellformatdialog.h  texteditorcompleter.cpp  textutils.h
src/kpimtextedittexttospeech/: CMakeLists.txt  KF5PimTextEditTextToSpeechConfig.cmake.in  abstracttexttospeechconfiginterface.cpp  abstracttexttospeechconfiginterface.h  abstracttexttospeechinterface.cpp  abstracttexttospeechinterface.h  kpimtextedittexttospeech_private_export.h  texttospeech.cpp  texttospeech.h  texttospeechactions.cpp  texttospeechactions.h  texttospeechconfigdialog.cpp  texttospeechconfigdialog.h  texttospeechconfiginterface.cpp  texttospeechconfiginterface.h  texttospeechconfigwidget.cpp  texttospeechconfigwidget.h  texttospeechcontainerwidget.cpp  texttospeechcontainerwidget.h  texttospeechinterface.cpp  texttospeechinterface.h  texttospeechlanguagecombobox.cpp  texttospeechlanguagecombobox.h  texttospeechsliderwidget.cpp  texttospeechsliderwidget.h  texttospeechutil.cpp  texttospeechutil.h  texttospeechwidget.cpp  texttospeechwidget.h
src/tests/: CMakeLists.txt  inserthtmldialog_demo.cpp  showemoticonunicodetab_gui.cpp  testgeneratehtmlbuildergui.cpp  (+3 more)
tests/: CMakeLists.txt  inserthtmldialog_demo.cpp  showemojiunicode_gui.cpp  showemoticonlistwidgetselector_gui.cpp  showemoticonunicodetab_gui.cpp  slidecontainer_gui.cpp  syntaxhighlightertest_demo.cpp  syntaxhighlightertest_demo.h  testgeneratehtmlbuildergui.cpp  testgeneratehtmlbuildergui.h  testgenerateplaintextbuildergui.cpp  testgenerateplaintextbuildergui.h  textedit_demo.cpp  textedittest.cpp  textedittest.h  textutilstest.cpp  textutilstest.h
(+373 files in other folders)
